--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       
 
-      // LIGHTS
+      // LIGHTS   //das ist ein kommentar
       ambientLight = new THREE.AmbientLight(0xffffff, 0.5)
       scene.add(ambientLight)
       light = new THREE.PointLight(0xffffff, 0.8, 100)
