--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
       function getObjectByName(){
         var arm2 = scene.getObjectByName("arm2");
-        arm2.rotation.x = Math.PI / 2;
+        arm2.rotation.x = Math.PI;
 
       }
       getObjectByName();
