--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
   <body>
     <p> 
-      Wenn sie einen Punkt einstellen möchten, zu dem sich der arm bewegen soll, stellen sie diesen auf dem entsprechenden Slider ein. <br>
-       Dieser kontrolliert die verscheidenen Kordinaten des Punktes, zu welchem der Arm sich bewegt<br>
-       Genauere Infos über Funktionsweise u.ä. finden sie <a href="https://github.com/Selixxx/Robotterarm/blob/main/README.md">hier</a><br>
-      &copy; Jonatan Tschech</p>
+      Wenn sie einen Punkt einstellen m&ouml;chten, zu dem sich der Arm bewegen soll, stellen sie diesen auf dem entsprechenden Slider ein. <br>
+       Dieser kontrolliert die verscheidenen Koordinaten des Punktes, zu welchen der Arm sich bewegt.<br>
+       Genauere Infos &uuml;ber Funktionsweise u.&auml;. finden sie <a href="https://github.com/Selixxx/Robotterarm/blob/main/README.md">hier</a>.<br>
+      &copy; Jonatan Tschech, Marc Harder</p>
     <div>
      
     </div>
